# ag-finance-toolkit

./: LICENSE  README.md  ag-finance-toolkit-build-plan.md  phase-1-phase-2-contract.md  phase_3context.md  pyproject.toml  requirements.txt  scratch_test.py  usda-nass-quick-stats-implementation-plan.md
agents/: README.md  context.md
agents/plans/: README.md
agfin/: __init__.py
agfin/connectors/: __init__.py  nass.py  weather.py
agfin/metrics/: __init__.py  liquidity.py  profitability.py  repayment.py  solvency.py
agfin/risk/: __init__.py  distributions.py  monte_carlo.py
agfin/schemas/: __init__.py  farm_inputs.py  outputs.py
examples/: farm_risk_demo.ipynb
tests/: conftest.py  test_connectors_nass.py  test_metrics.py  test_monte_carlo.py  test_schemas.py  test_weather.py
